--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,32 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+p {
+  margin: 0;
+  padding: 0;
+}
+
+.transcationBlock {
+  border-color: rgba(0,0,0,0.175);
+  border-width: 1px;
+  border-radius: 0.5rem;
+  box-shadow: 0 2px 15px -3px rgba(0,0,0,0.07),0 10px 20px -2px rgba(0,0,0,0.04);
+}
+.transcationElement {
+  padding: 15px 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+.transcationEleInfo {
+  display: flex;
+  flex-direction: row;
+}
+.transactionList {
+  display: flex;
+  flex-direction: row;
+  overflow-x: auto;
+  gap: 24px;
+  max-width: 80rem;
+  padding: 15px 35px;
+}
